<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dc="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alarm_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:gravity="center_horizontal|top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/digital_clock"
            style="@style/medium_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="true"
            android:gravity="center"
            android:textColor="@color/clock_white"
            android:textSize="@dimen/alarm_time_font_size"
            android:text="20:00"
            tools:text="20:00" />

        <Space
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/onoff"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:thumbTextPadding="10dp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:contentDescription="@string/delete_alarm"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:src="@drawable/ic_delete" />

        <LinearLayout
            android:id="@+id/expand_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/collapse_expand_height"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/edit_label"
                style="@style/body_not_caps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/mainColor"
                android:ellipsize="end"
                android:hint="@string/label"
                android:paddingBottom="12dp"
                android:paddingEnd="12dp"
                android:paddingLeft="18dp"
                android:paddingRight="12dp"
                android:paddingStart="18dp"
                android:paddingTop="12dp"
                android:singleLine="true"
                android:textColor="@color/clock_gray" />

            <CheckBox
                android:id="@+id/repeat_onoff"
                style="@style/body"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="10dp"
                android:text="@string/alarm_repeat"
                android:textColor="@color/clock_white" />

            <LinearLayout
                android:id="@+id/repeat_days"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="top"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:visibility="gone">
                <!-- Day buttons are put here programatically -->
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/choose_ringtone"
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_toLeftOf="@+id/vibrate_onoff"
                    android:layout_toStartOf="@+id/vibrate_onoff"
                    android:background="@color/mainColor"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_ringtone"
                    android:drawablePadding="2dp"
                    android:drawableStart="@drawable/ic_ringtone"
                    android:ellipsize="marquee"
                    android:gravity="center_vertical"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/clock_white"
                    tools:ignore="RtlCompat" />

                <CheckBox
                    android:id="@+id/vibrate_onoff"
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:includeFontPadding="false"
                    android:text="@string/alarm_vibrate"
                    android:textColor="@color/clock_gray" />
            </RelativeLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/collapse_expand"
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapse_expand_height"
            android:layout_gravity="bottom"
            android:contentDescription="@string/collapse_alarm">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:layout_gravity="start|center_vertical"
                android:contentDescription="@string/expand_alarm"
                android:src="@drawable/ic_expand_down" />

            <View
                android:id="@+id/hairline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:background="#28ffffff" />

            <com.sempol.thealarm.widget.EllipsizeLayout
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="104dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="104dp"
                android:layout_marginStart="48dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/label"
                    style="@style/alarm_label_not_caps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/clock_gray" />

                <TextView
                    android:id="@+id/daysOfWeek"
                    style="@style/alarm_label_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:textColor="@color/clock_white" />
            </com.sempol.thealarm.widget.EllipsizeLayout>
        </FrameLayout>
    </FrameLayout>
</LinearLayout>